--- a/HTML/Ejercicio5/index.html
+++ b/HTML/Ejercicio5/index.html
@@ -47,6 +47,8 @@
       <td style="border:1px solid black" colspan="2"> "Necropsia de un Infortunio es su ultimo disco"</td>
     </tr>
   </table>
+  <table border="2" align="left">
+
 </body>
 
 </html>
