--- a/Javascript/Ejercicio 11 (palabra mas larga)/index.html
+++ b/Javascript/Ejercicio 11 (palabra mas larga)/index.html
@@ -8,20 +8,25 @@
   <link href="./css/estilo.css" rel="stylesheet" type="text/css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <title>Ejercicio 6</title>
+  <title>Ejercicio 11</title>
 </head>
 
 <body>
   <div class="card">
-    <div class="card-body">
-      <h5 class="card-title">Ingrese un numero</h5>
+    <div class="card-body" id="form2">
+      <h5 class="card-title">Ingrese una palabra</h5>
       <form id="form">
         <div class="input-group mb-3">
           <input type="text" class="form-control" id="ingresoDato">
           <button class="btn btn-outline-secondary" type="submit">Enviar</button>
         </div>
       </form>
-      <h3 id="respuesta"></h3>
+      <div id="respuestaDiv">
+        <h3 id="respuesta"></h3>
+      </div>
+      <div id="botonInicio">
+        <button class="btn btn-outline-secondary" onclick="principio() ;">volver</button>
+      </div>
     </div>
   </div>
   <script src="./javascript/script.js" type="text/javascript"></script>
