--- a/Javascript/Ejercicio 4 (S y N)/index.html
+++ b/Javascript/Ejercicio 4 (S y N)/index.html
@@ -8,13 +8,13 @@
   <link href="./css/estilo.css" rel="stylesheet" type="text/css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <title>Ejercicio 6</title>
+  <title>Ejercicio 4</title>
 </head>
 
 <body>
   <div class="card">
     <div class="card-body">
-      <h5 class="card-title">Ingrese un numero</h5>
+      <h5 class="card-title">Solo puede ingresar S y N</h5>
       <form id="form">
         <div class="input-group mb-3">
           <input type="text" class="form-control" id="ingresoDato">
